Changelog
=========

1.0 (unreleased)
------------------

- Bootstrap: remove extraneous username from the personal tools menu. 
  [davidjb]
- Bootstrap: expand selectors for different button types.
  [davidjb]
- Bootstrap: improve button markup to ensure button classes are transposed
  (fixing add/edit content, and add user form issues).
  [davidjb]
- Bootstrap: tidy form field markup to make fields clear, especially when
  errors have occurred.
  [davidjb]
- Bootstrap: ensure accordions are constructed in such a way that 
  the ``parent`` data attribute is populated for nested elements. Previously,
  this would only function if the structure was ``form > fieldset``.
  [davidjb]
- Bootstrap: translate workflow states into textual emphasis classes.
  [davidjb] 
- Bootstrap: style album/thumbnail views for folders with Bootstrap markup.
  [davidjb]
- Bootstrap: style portlet management options with Bootstrap markup.
  [davidjb]
- Bootstrap: ensure *all* xi:include rules are excluded if theming
  needs to be avoided by placing the conditional statement on the
  top-level rules element. Without this, included rules are still
  applied to content, breaking unthemed pages.
  [davidjb]
- Bootstrap: convert dl form tabbing in Plone into accordions.
  [davidjb]
- Bootstrap: ensure form classes are themed. This allows form functionality
  that relies on classes (such as unload protection, KSS, etc).
  [davidjb]
- Bootstrap: ensure accordions work on tabbed forms where fieldsets
  have classes assigned.
  [davidjb]
- Radio buttons on forms should be on the left in Bootstrap.
  [davidjb]
- Refactor breadcrumb replacement to use XPath in Boostrap.
  [davidjb]
- Ensure breadcrumbs display on themed pages in Bootstrap.
  [davidjb]
- Allow dragging to occur on table listings in Bootstrap.
  [davidjb]
- Use label text as placeholder for site search in Bootstrap.
  [davidjb]
- Fix typo for rule for manage portlets rule in Bootstrap.
  [davidjb]